terminando a quinta aula de bootstrap

--- a/index.html
+++ b/index.html
@@ -25,5 +25,31 @@
                 </ul>
             </div>
         </nav>
+        <section id="quemsomos">
+            <div class="container-fluid quemsomos text-center margin">
+                <h3 class="margin">Quem somos</h3>
+                <img src="img/quemsomos.jpg" class="rounded-circle" width="400px" height="400px">
+                <h3>Trabalhando para o melhor da população</h3>
+            </div>
+        </section>
+
+        <section id="parceiros">
+            <div class="container-fluid text-center margin parceiros">
+                <h3>Parceiros</h3>
+                <div class="container">
+                    <div class="row margin">
+                        <div class="col-lg-4">
+                            <img src="img/fig10.jpg" class="rounded-circle" width="300px" height="300px">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/fig23.jpg" class="rounded-circle" width="300px" height="300px">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/fig6.jpg" class="rounded-circle" width="300px" height="300px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
