--- a/index.html
+++ b/index.html
@@ -1,55 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <title>Minha página</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#">
-                <img src="img/detran.jpg" width="150px">
-            </a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Quem somos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Parceiros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Serviços</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <section id="quemsomos">
-            <div class="container-fluid quemsomos text-center margin">
-                <h3 class="margin">Quem somos</h3>
-                <img src="img/quemsomos.jpg" class="rounded-circle" width="400px" height="400px">
-                <h3>Trabalhando para o melhor da população</h3>
-            </div>
-        </section>
+  <head>
+    <title>Minha página</title>
+    <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="bootstrap/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="#">
+        <img src="img/detran.jpg" width="150px" />
+      </a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#quemsomos">Quem somos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#parceiros">Parceiros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#servicos">Serviços</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <section id="quemsomos">
+      <div class="container-fluid quemsomos text-center margin">
+        <h3 class="margin">Quem somos</h3>
+        <img
+          src="img/quemsomos.jpg"
+          class="rounded-circle"
+          width="400px"
+          height="400px"
+        />
+        <h3>Trabalhando para o melhor da população</h3>
+      </div>
+    </section>
 
-        <section id="parceiros">
-            <div class="container-fluid text-center margin parceiros">
-                <h3>Parceiros</h3>
-                <div class="container">
-                    <div class="row margin">
-                        <div class="col-lg-4">
-                            <img src="img/fig10.jpg" class="rounded-circle" width="300px" height="300px">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/fig23.jpg" class="rounded-circle" width="300px" height="300px">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/fig6.jpg" class="rounded-circle" width="300px" height="300px">
-                        </div>
-                    </div>
-                </div>
+    <section id="parceiros">
+      <div class="container-fluid text-center margin parceiros">
+        <h3>Parceiros</h3>
+        <div class="container">
+          <div class="row margin">
+            <div class="col-lg-4">
+              <img
+                src="img/generic.jpg"
+                class="rounded-circle"
+                width="300px"
+                height="300px"
+              />
             </div>
-        </section>
-    </body>
+            <div class="col-lg-4">
+              <img
+                src="img/matrix.jpeg"
+                class="rounded-circle"
+                width="300px"
+                height="300px"
+              />
+            </div>
+            <div class="col-lg-4">
+              <img
+                src="img/metallica.png"
+                class="rounded-circle"
+                width="300px"
+                height="300px"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="servicos">
+      <div class="container-fluid text-center margin servicos">
+        <h3>Serviços</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <img
+                src="img/kof.jpg"
+                class="rounded-circle"
+                width="300px"
+                height="300px"
+              />
+            </div>
+            <div class="col-lg-6">
+              <img
+                src="img/download.jpg"
+                class="rounded-circle"
+                width="300px"
+                height="300px"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="container-fluid text-center margin">
+      <p>Desenvolvido por Rodrigo Yokoo</p>
+    </footer>
+  </body>
 </html>
